@@ -1,2 +1,3 @@
 variable(genTestS, epicsUInt16)
 variable(genTestL, epicsInt32)
+variable(genAsyncL, epicsUInt32)
